--- a/android/app/src/main/res/layout/activity_splash.xml
+++ b/android/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="no.dnt.opptur.SplashActivity">
+    tools:context="no.dnt.sjekkut.SplashActivity">
 
     <View
         android:layout_width="match_parent"
