make tests compile & run

--- a/ios/SjekkUT/Base.lproj/Main.storyboard
+++ b/ios/SjekkUT/Base.lproj/Main.storyboard
@@ -886,6 +886,6 @@ Alle kan delta på Opp24, og det er helt gratis! Bestiger du alle de 24 toppene 
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="TOc-wB-BP5"/>
-        <segue reference="JZJ-TV-vHu"/>
+        <segue reference="imk-vY-cVJ"/>
     </inferredMetricsTieBreakers>
 </document>
