--- a/ios/SjekkUT/Base.lproj/Main.storyboard
+++ b/ios/SjekkUT/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
@@ -31,7 +32,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChallengeHeader" rowHeight="120" id="uVD-sz-A3H" customClass="ChallengeCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProjectHeader" rowHeight="120" id="uVD-sz-A3H" customClass="ProjectHeader" customModule="SjekkUt" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="22" width="600" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uVD-sz-A3H" id="paa-ge-2rd">
@@ -39,14 +40,25 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="challenge-footer" translatesAutoresizingMaskIntoConstraints="NO" id="2N7-Vs-5Hx">
-                                                    <rect key="frame" x="0.0" y="58" width="600" height="61"/>
+                                                    <rect key="frame" x="0.0" y="8" width="600" height="111"/>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sHN-Xx-ToT">
                                                     <rect key="frame" x="8" y="8" width="584" height="62"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nFO-ag-OJP" userLabel="challenge logo">
-                                                            <rect key="frame" x="0.0" y="0.0" width="476" height="62"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nFO-ag-OJP" userLabel="challenge logo">
+                                                            <rect key="frame" x="0.0" y="0.0" width="62" height="62"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="nFO-ag-OJP" secondAttribute="height" id="l6U-sE-wTy"/>
+                                                            </constraints>
                                                         </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xzv-wr-uzJ">
+                                                            <rect key="frame" x="70" y="41" width="406" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                            <color key="shadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <size key="shadowOffset" width="0.0" height="0.0"/>
+                                                        </label>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="bGD-Db-PQW">
                                                             <rect key="frame" x="484" y="0.0" width="100" height="62"/>
                                                             <constraints>
@@ -57,7 +69,7 @@
                                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                             </state>
                                                             <connections>
-                                                                <action selector="readMoreClicked:" destination="uVD-sz-A3H" eventType="touchUpInside" id="Njb-7T-9Wi"/>
+                                                                <action selector="readMoreClicked:" destination="uVD-sz-A3H" eventType="touchUpInside" id="6vH-gM-Mai"/>
                                                             </connections>
                                                         </button>
                                                     </subviews>
@@ -65,11 +77,14 @@
                                                         <constraint firstAttribute="bottom" secondItem="bGD-Db-PQW" secondAttribute="bottom" id="0I1-zu-pj9"/>
                                                         <constraint firstAttribute="trailing" secondItem="bGD-Db-PQW" secondAttribute="trailing" id="3b7-8e-4XQ"/>
                                                         <constraint firstAttribute="bottom" secondItem="nFO-ag-OJP" secondAttribute="bottom" id="3oR-y2-Pfd"/>
+                                                        <constraint firstItem="xzv-wr-uzJ" firstAttribute="bottom" secondItem="nFO-ag-OJP" secondAttribute="bottom" id="9Jp-R5-j4d"/>
                                                         <constraint firstItem="nFO-ag-OJP" firstAttribute="leading" secondItem="sHN-Xx-ToT" secondAttribute="leading" id="KPW-GC-Pyw"/>
+                                                        <constraint firstItem="xzv-wr-uzJ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="sHN-Xx-ToT" secondAttribute="top" id="KoQ-LR-zV9"/>
                                                         <constraint firstItem="nFO-ag-OJP" firstAttribute="top" secondItem="sHN-Xx-ToT" secondAttribute="top" id="Tz6-11-dud"/>
+                                                        <constraint firstItem="xzv-wr-uzJ" firstAttribute="leading" secondItem="nFO-ag-OJP" secondAttribute="trailing" constant="8" id="XR5-KX-2pm"/>
+                                                        <constraint firstItem="bGD-Db-PQW" firstAttribute="leading" secondItem="xzv-wr-uzJ" secondAttribute="trailing" constant="8" id="eHP-LX-J1i"/>
                                                         <constraint firstItem="bGD-Db-PQW" firstAttribute="top" secondItem="sHN-Xx-ToT" secondAttribute="top" id="erH-3b-LFT"/>
                                                         <constraint firstAttribute="height" constant="62" id="wCF-OP-o9q"/>
-                                                        <constraint firstItem="bGD-Db-PQW" firstAttribute="leading" secondItem="nFO-ag-OJP" secondAttribute="trailing" constant="8" id="xio-CZ-LST"/>
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Congratulations! You have summited all 24 summits! This is totally awesome and you rock!" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OXH-wX-4GR">
@@ -91,7 +106,7 @@
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
-                                                        <action selector="joinChallengeClicked:" destination="uVD-sz-A3H" eventType="touchUpInside" id="kwX-U3-tIT"/>
+                                                        <action selector="joinChallengeClicked:" destination="uVD-sz-A3H" eventType="touchUpInside" id="uS4-or-JZy"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -106,17 +121,19 @@
                                                 <constraint firstItem="sHN-Xx-ToT" firstAttribute="leading" secondItem="paa-ge-2rd" secondAttribute="leading" constant="8" id="duZ-71-Rbk"/>
                                                 <constraint firstAttribute="bottom" secondItem="OXH-wX-4GR" secondAttribute="bottom" constant="4" id="nRH-bg-KKV"/>
                                                 <constraint firstItem="2N7-Vs-5Hx" firstAttribute="leading" secondItem="paa-ge-2rd" secondAttribute="leading" id="nqQ-hC-H3h"/>
+                                                <constraint firstItem="2N7-Vs-5Hx" firstAttribute="top" secondItem="paa-ge-2rd" secondAttribute="topMargin" id="oKB-bR-iyP"/>
                                                 <constraint firstAttribute="trailing" secondItem="sHN-Xx-ToT" secondAttribute="trailing" constant="8" id="rxZ-s7-cLG"/>
                                                 <constraint firstAttribute="trailing" secondItem="Kxj-xj-gTr" secondAttribute="trailing" constant="8" id="z0G-M7-avX"/>
                                                 <constraint firstAttribute="trailing" secondItem="2N7-Vs-5Hx" secondAttribute="trailing" id="zvD-lv-DWl"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="challengeFooter" destination="2N7-Vs-5Hx" id="Y6R-F4-KMA"/>
-                                            <outlet property="challengeLogo" destination="nFO-ag-OJP" id="iR5-9B-t6S"/>
-                                            <outlet property="challengeStatusLabel" destination="OXH-wX-4GR" id="SCo-wa-v8u"/>
-                                            <outlet property="joinChallengeButton" destination="Kxj-xj-gTr" id="pBd-cR-f2o"/>
-                                            <outlet property="readMoreButton" destination="bGD-Db-PQW" id="D1h-EM-xn1"/>
+                                            <outlet property="footerImage" destination="2N7-Vs-5Hx" id="dDC-78-xQK"/>
+                                            <outlet property="joinButton" destination="Kxj-xj-gTr" id="eEi-YE-IT4"/>
+                                            <outlet property="nameLabel" destination="xzv-wr-uzJ" id="PBT-Rc-K9f"/>
+                                            <outlet property="projectImage" destination="nFO-ag-OJP" id="bEi-i4-hBe"/>
+                                            <outlet property="readMoreButton" destination="bGD-Db-PQW" id="daO-n0-Pi3"/>
+                                            <outlet property="statusLabel" destination="OXH-wX-4GR" id="udm-0h-44B"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NoChallengeHeader" textLabel="hY6-0v-phf" style="IBUITableViewCellStyleDefault" id="TDc-mr-qm5">
@@ -419,8 +436,8 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="imageView" destination="tRH-8b-OBM" id="AM1-KY-ANr"/>
                                     <outlet property="nameLabel" destination="zk1-jX-cbe" id="r7t-Gi-0iM"/>
+                                    <outlet property="projectImage" destination="tRH-8b-OBM" id="FZE-ve-fdJ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
